--- a/index.html
+++ b/index.html
@@ -22,4 +22,5 @@
 <tr><td><a href="https://drive.google.com/uc?export=download&id=1WbrCWDfzq0um__Eu_ufXC3ZVFsITpm4Z">貉</a></td><td>小泉八雲</td><td>ずんだもん-ノーマル</td><td>12 MiB</td><td>0:02:31</td></tr>
 <tr><td><a href="https://drive.google.com/uc?export=download&id=14guoj2AGx3lefF4UTxe2sBm6uOr0VAy0">羅生門</a></td><td>芥川竜之介</td><td>ずんだもん-ノーマル</td><td>546 B</td><td>0:00:00</td></tr>
 <tr><td><a href="https://drive.google.com/uc?export=download&id=1Gkr72r28RICxSvUWycplWfVRru1l7beh">羅生門</a></td><td>芥川竜之介</td><td>ずんだもん-ノーマル</td><td>626 B</td><td>0:00:00</td></tr>
+<tr><td><a href="https://drive.google.com/uc?export=download&id=1X45IQZVYDzbeT4wjL7wzJHxsxITj2Gho">貉</a></td><td>小泉八雲</td><td>ずんだもん-ノーマル</td><td>917 KiB</td><td>0:00:19</td></tr>
 </table></body></html>
