--- a/index.html
+++ b/index.html
@@ -19,4 +19,5 @@
 <tr><td><a href="https://drive.google.com/uc?export=download&id=1LqDRf3O7mLaFycFndM4EqQfPhg-CBh6-">河童</a></td><td>芥川竜之介</td><td>ずんだもん-ノーマル</td><td>3 MiB</td><td>0:01:10</td></tr>
 <tr><td><a href="https://drive.google.com/uc?export=download&id=1qWZEr9fBRijg0nVO-b3-hjaVZcKlhqEx">懐中時計</a></td><td>土原耕作</td><td>ずんだもん-ノーマル</td><td>82 B</td><td>0:00:00</td></tr>
 <tr><td><a href="https://drive.google.com/uc?export=download&id=1ULs8CHOzDAhO6750ryCHobe_mq27IIHj">懐中時計</a></td><td>土原耕作</td><td>ずんだもん-ノーマル</td><td>1 MiB</td><td>0:00:31</td></tr>
+<tr><td><a href="https://drive.google.com/uc?export=download&id=1-qDHYq3eJ0LjamMJVNcU1UDhfhIabkPd">黒死館殺人事件</a></td><td>小栗虫太郎</td><td>春日部つむぎ-ノーマル</td><td>2 MiB</td><td>0:01:02</td></tr>
 </table></body></html>
