--- a/index.html
+++ b/index.html
@@ -8,4 +8,5 @@
 <tr><td><a href="https://drive.google.com/uc?export=download&id=1la2gUDD8ivUqYHnAdkCVDgwg2WJPI-IH">羅生門</a></td><td>芥川竜之介</td><td>ずんだもん-ノーマル</td><td>49 MiB</td><td>0:18:06</td></tr>
 <tr><td><a href="https://drive.google.com/uc?export=download&id=16bQxatNE7pJps5AaoBEO2KSaafh7Pl2z">モルグ街の殺人事件</a></td><td>ポーエドガー・アラン</td><td>ずんだもん-ノーマル</td><td>294 MiB</td><td>1:47:20</td></tr>
 <tr><td><a href="https://drive.google.com/uc?export=download&id=1rO0PRaDEdKyPuB7w6qYjoXbidYwbHUKw">選挙殺人事件</a></td><td>坂口安吾</td><td>春日部つむぎ-ノーマル</td><td>100 MiB</td><td>0:36:44</td></tr>
+<tr><td><a href="https://drive.google.com/uc?export=download&id=1CrDZ2ReokNKjLaHSm6pw8m7dGgnZQee-">人間椅子</a></td><td>江戸川乱歩</td><td>春日部つむぎ-ノーマル</td><td>119 MiB</td><td>0:43:34</td></tr>
 </table></body></html>
