--- a/index.html
+++ b/index.html
@@ -13,4 +13,5 @@
 <tr><td><a href="https://drive.google.com/uc?export=download&id=1DfmQRegFniyuPj377ciq9amHrIqUTbkw">蒼炎石</a></td><td>ドイルアーサー・コナン</td><td>ずんだもん-ノーマル</td><td>145 MiB</td><td>0:52:58</td></tr>
 <tr><td><a href="https://drive.google.com/uc?export=download&id=19tMOP_LfRFDnsQi6wiWQZVe6qj4vdCG0">人でなしの恋</a></td><td>江戸川乱歩</td><td>冥鳴ひまり-ノーマル</td><td>133 MiB</td><td>0:48:27</td></tr>
 <tr><td><a href="https://drive.google.com/uc?export=download&id=1JFNcRTRzybYP3y1uNzg6z_01yUaZFtCg">麻雀殺人事件</a></td><td>海野十三</td><td>ずんだもん-ノーマル</td><td>134 MiB</td><td>0:49:03</td></tr>
+<tr><td><a href="https://drive.google.com/uc?export=download&id=18j48rFAXrTLydv-BojDvwEqAGmp_Hik5">赤毛連盟</a></td><td>ドイルアーサー・コナン</td><td>ずんだもん-ノーマル</td><td>188 MiB</td><td>1:08:35</td></tr>
 </table></body></html>
