--- a/index.html
+++ b/index.html
@@ -15,4 +15,5 @@
 <tr><td><a href="https://drive.google.com/uc?export=download&id=1JFNcRTRzybYP3y1uNzg6z_01yUaZFtCg">麻雀殺人事件</a></td><td>海野十三</td><td>ずんだもん-ノーマル</td><td>134 MiB</td><td>0:49:03</td></tr>
 <tr><td><a href="https://drive.google.com/uc?export=download&id=18j48rFAXrTLydv-BojDvwEqAGmp_Hik5">赤毛連盟</a></td><td>ドイルアーサー・コナン</td><td>ずんだもん-ノーマル</td><td>188 MiB</td><td>1:08:35</td></tr>
 <tr><td><a href="https://drive.google.com/uc?export=download&id=17iVyY7lDR83ezX-ug-KTxsR77j3RJNhi">『三四郎』予告</a></td><td>夏目漱石</td><td>ずんだもん-ささやき</td><td>1 MiB</td><td>0:00:41</td></tr>
+<tr><td><a href="https://drive.google.com/uc?export=download&id=1zLEDYzCVo6CKuYuzZA1uVfNxJwA7pWu0">ニャルラトホテプ</a></td><td>ラヴクラフトハワード・フィリップス</td><td>冥鳴ひまり-ノーマル</td><td>25 MiB</td><td>0:09:13</td></tr>
 </table></body></html>
