--- a/index.html
+++ b/index.html
@@ -5,4 +5,5 @@
 <th>題名</th><th>著者</th><th>読み手</th><th>容量</th><th>再生時間</th>
 </tr>
 <tr><td><a href="https://drive.google.com/uc?export=download&id=1MphgZzPkXWk7w9d_RSAsoAL74cwUr0ER">懐中時計</a></td><td>土原耕作</td><td>ずんだもん-ノーマル</td><td>1.44 MiB</td><td>0:00:31</td></tr>
+<tr><td><a href="https://drive.google.com/uc?export=download&id=1DbFnwYtv9qwG8AmmHOcR7aHUcX8CUFNF">貉</a></td><td>小泉八雲</td><td>ずんだもん-ノーマル</td><td>12.71 MiB</td><td>0:04:37</td></tr>
 </table></body></html>
