--- a/index.html
+++ b/index.html
@@ -4,8 +4,5 @@
 <tr>
 <th>題名</th><th>著者</th><th>読み手</th><th>容量</th><th>再生時間</th>
 </tr>
-<tr><td><a href="https://drive.google.com/uc?export=download&id=1MphgZzPkXWk7w9d_RSAsoAL74cwUr0ER">懐中時計</a></td><td>土原耕作</td><td>ずんだもん-ノーマル</td><td>1.44 MiB</td><td>0:00:31</td></tr>
-<tr><td><a href="https://drive.google.com/uc?export=download&id=1DbFnwYtv9qwG8AmmHOcR7aHUcX8CUFNF">貉</a></td><td>小泉八雲</td><td>ずんだもん-ノーマル</td><td>12.71 MiB</td><td>0:04:37</td></tr>
-<tr><td><a href="https://drive.google.com/uc?export=download&id=1ltrpfMpJ4PiXFC-2CuHvYJr6uQPIDd_v">懐中時計</a></td><td>土原耕作</td><td>ずんだもん-ノーマル</td><td>1.44 MiB</td><td>0:00:31</td></tr>
-<tr><td><a href="https://drive.google.com/uc?export=download&id=1tLV4rMMrqL55R1h3a0ZaZTsXvh0U_1z9">懐中時計</a></td><td>土原耕作</td><td>ずんだもん-ノーマル</td><td>1.44 MiB</td><td>0:00:31</td></tr>
+<tr><td><a href="https://drive.google.com/uc?export=download&id=1McrAg4nrRyt5Urs1S_OQqrWpEN-Hs8Kk">羅生門</a></td><td>芥川竜之介</td><td>春日部つむぎ-ノーマル</td><td>24.58 MiB</td><td>0:08:56</td></tr>
 </table></body></html>
