--- a/index.html
+++ b/index.html
@@ -4,6 +4,5 @@
 <tr>
 <th>題名</th><th>著者</th><th>読み手</th><th>容量</th><th>再生時間</th>
 </tr>
-<tr><td><a href="https://drive.google.com/uc?export=download&id=1rld_j_uy5UrDpBVwjd7GC21_KqohEiqO">懐中時計</a></td><td>土原耕作</td><td>ずんだもん-ノーマル</td><td>1.46 MiB</td><td>0:00:31</td></tr>
-<tr><td><a href="https://drive.google.com/uc?export=download&id=1POKgzla5qXO84WdZtno8wFFKNezLajXA">日記帳</a></td><td>江戸川乱歩</td><td>春日部つむぎ-ノーマル</td><td>4.5 MiB</td><td>0:01:38</td></tr>
+<tr><td><a href="https://drive.google.com/uc?export=download&id=1k7FNjd_xMwl7lS_YY_c-7Cmi0nx9EHci">羅生門</a></td><td>芥川竜之介</td><td>ずんだもん-ノーマル</td><td>49.73 MiB</td><td>0:18:06</td></tr>
 </table></body></html>
