Update html add content

--- a/index.html
+++ b/index.html
@@ -5,4 +5,5 @@
 <th>題名</th><th>著者</th><th>読み手</th><th>容量</th><th>再生時間</th>
 </tr>
 <tr><td><a href="https://drive.google.com/uc?export=download&id=1k7FNjd_xMwl7lS_YY_c-7Cmi0nx9EHci">羅生門</a></td><td>芥川竜之介</td><td>ずんだもん-ノーマル</td><td>49.73 MiB</td><td>0:18:06</td></tr>
+<tr><td><a href="https://drive.google.com/uc?export=download&id=1YTaGcUKGxIewc_OHky_2lcRhGoP3NVqO">二銭銅貨</a></td><td>江戸川乱歩</td><td>ずんだもん-ノーマル</td><td>24.7 MiB</td><td>0:08:59</td></tr>
 </table></body></html>
