--- a/index.html
+++ b/index.html
@@ -15,4 +15,5 @@
 <tr><td><a href="https://drive.google.com/uc?export=download&id=1LQ-mK9zdM88Dv23x47TgZ8zAPtzlWXve">河童</a></td><td>芥川竜之介</td><td>四国めたん-ささやき</td><td>280.98 MiB</td><td>1:42:18</td></tr>
 <tr><td><a href="https://drive.google.com/uc?export=download&id=1Eqph2WuNepugek77x4KiSpaDtLMpBUml">人間椅子</a></td><td>江戸川乱歩</td><td>ずんだもん-ささやき</td><td>142 MiB</td><td>0:28:14</td></tr>
 <tr><td><a href="https://drive.google.com/uc?export=download&id=1Sm2JcevSssWgq7YttUBbGCMcwGjxNTcF">羅生門</a></td><td>芥川竜之介</td><td>ずんだもん-ノーマル</td><td>344.0 B</td><td>0:00:00</td></tr>
+<tr><td><a href="https://drive.google.com/uc?export=download&id=1Vsj5zMPKC_ENTvzpWIS6C2uPN0deO6JN">貉</a></td><td>小泉八雲</td><td>ずんだもん-ノーマル</td><td>124.0 B</td><td>0:00:00</td></tr>
 </table></body></html>
