--- a/index.html
+++ b/index.html
@@ -17,4 +17,5 @@
 <tr><td><a href="https://drive.google.com/uc?export=download&id=1Sm2JcevSssWgq7YttUBbGCMcwGjxNTcF">羅生門</a></td><td>芥川竜之介</td><td>ずんだもん-ノーマル</td><td>344.0 B</td><td>0:00:00</td></tr>
 <tr><td><a href="https://drive.google.com/uc?export=download&id=1Vsj5zMPKC_ENTvzpWIS6C2uPN0deO6JN">貉</a></td><td>小泉八雲</td><td>ずんだもん-ノーマル</td><td>124.0 B</td><td>0:00:00</td></tr>
 <tr><td><a href="https://drive.google.com/uc?export=download&id=1wAp__5vhaCac_FmW8x0AMXT63xDH_sKx">手袋を買いに</a></td><td>新美南吉</td><td>ずんだもん-ノーマル</td><td>28.25 MiB</td><td>0:10:17</td></tr>
+<tr><td><a href="https://drive.google.com/uc?export=download&id=1nBKJwLwabC-Ljl58Q7IEg0rhCo0HH7wX">日記帳</a></td><td>江戸川乱歩</td><td>ずんだもん-ノーマル</td><td>57.9 MiB</td><td>0:21:04</td></tr>
 </table></body></html>
