--- a/index.html
+++ b/index.html
@@ -5,4 +5,5 @@
 <th>題名</th><th>著者</th><th>読み手</th><th>容量</th><th>再生時間</th>
 </tr>
 <tr><td><a href="https://drive.google.com/uc?export=download&id=1JL4ZMnBfc9DQm9GZxIDMLHRRrMPOa_Y3">檸檬</a></td><td>梶井基次郎</td><td>ずんだもん-ささやき</td><td>40.46 MiB</td><td>0:14:43</td></tr>
+<tr><td><a href="https://drive.google.com/uc?export=download&id=1odh4aQLYHhlIoHgqGLNr5BQ1Yhbedrck">犯人</a></td><td>太宰治</td><td>ずんだもん-ノーマル</td><td>735.09 KiB</td><td>0:00:15</td></tr>
 </table></body></html>
