--- a/index.html
+++ b/index.html
@@ -25,4 +25,5 @@
 <tr><td><a href="https://drive.google.com/uc?export=download&id=1X45IQZVYDzbeT4wjL7wzJHxsxITj2Gho">貉</a></td><td>小泉八雲</td><td>ずんだもん-ノーマル</td><td>917 KiB</td><td>0:00:19</td></tr>
 <tr><td><a href="https://drive.google.com/uc?export=download&id=1jjU7VSwicZumiYJVcVYQYhPKx4VrK-yn">羅生門</a></td><td>芥川竜之介</td><td>ずんだもん-ノーマル</td><td>49 MiB</td><td>0:18:06</td></tr>
 <tr><td><a href="https://drive.google.com/uc?export=download&id=1FaazlhiU29-WptjuHNS4AD0nPCQtXOQx">〔雨ニモマケズ〕</a></td><td>宮沢賢治</td><td>ずんだもん-ノーマル</td><td>87.59 KiB</td><td>0:00:01</td></tr>
+<tr><td><a href="https://drive.google.com/uc?export=download&id=1DT1Wguo-FsBBzU3knGI_RluDQ77kJVMq">蜘蛛の糸</a></td><td>芥川竜之介</td><td>ずんだもん-ささやき</td><td>75.59 KiB</td><td>0:00:01</td></tr>
 </table></body></html>
