--- a/index.html
+++ b/index.html
@@ -30,4 +30,5 @@
 <tr><td><a href="https://drive.google.com/uc?export=download&id=1aXl3-I3F0hHB485mRKil2uvW4d2iN87U">蜘蛛の糸</a></td><td>芥川竜之介</td><td>ずんだもん-ノーマル</td><td>87.59 KiB</td><td>0:00:01</td></tr>
 <tr><td><a href="https://drive.google.com/uc?export=download&id=1niHhq80CGmqcgxw6eYXwVtJ2KcrWeeBY">蜘蛛の糸</a></td><td>芥川竜之介</td><td>ずんだもん-ノーマル</td><td>87.59 KiB</td><td>0:00:01</td></tr>
 <tr><td><a href="https://drive.google.com/uc?export=download&id=19EVdvW4J50D84vN3DsQRbzZYw5ev8kaO">蜘蛛の糸</a></td><td>芥川竜之介</td><td>ずんだもん-ささやき</td><td>75.59 KiB</td><td>0:00:01</td></tr>
+<tr><td><a href="https://drive.google.com/uc?export=download&id=1jmNL-_unGfuApJCSe-1_FjfEFbxUjuE8">蜘蛛の糸</a></td><td>芥川竜之介</td><td>ずんだもん-ささやき</td><td>24.55 MiB</td><td>0:08:56</td></tr>
 </table></body></html>
