--- a/index.html
+++ b/index.html
@@ -33,4 +33,5 @@
 <tr><td><a href="https://drive.google.com/uc?export=download&id=1jmNL-_unGfuApJCSe-1_FjfEFbxUjuE8">蜘蛛の糸</a></td><td>芥川竜之介</td><td>ずんだもん-ささやき</td><td>24.55 MiB</td><td>0:08:56</td></tr>
 <tr><td><a href="https://drive.google.com/uc?export=download&id=1K8El_5PlTCjhHdyGhgBej7XrunFQaWH_">懐中時計</a></td><td>土原耕作</td><td>ずんだもん-ノーマル</td><td>1.44 MiB</td><td>0:00:31</td></tr>
 <tr><td><a href="https://drive.google.com/uc?export=download&id=1Y3EuajceYvGJ8sQGffecp2FEwa22simZ">星の銀貨</a></td><td>グリムヴィルヘルム・カール</td><td>ずんだもん-ノーマル</td><td>7.96 MiB</td><td>0:02:53</td></tr>
+<tr><td><a href="https://drive.google.com/uc?export=download&id=1UtFp_GGWYrgwAyzP2nv4iWYfkB74BCZw">『吾輩は猫である』上篇自序</a></td><td>夏目漱石</td><td>ずんだもん-ノーマル</td><td>6.45 MiB</td><td>0:02:20</td></tr>
 </table></body></html>
