--- a/index.html
+++ b/index.html
@@ -5,4 +5,5 @@
 <th>題名</th><th>著者</th><th>読み手</th><th>容量</th><th>再生時間</th>
 </tr>
 <tr><td><a href="https://drive.google.com/uc?export=download&id=1ls5sbR4HxV0srnKyB6j7lJd-0aaOTkOQ">星の銀貨</a></td><td>グリムヤーコプ・ルートヴィッヒ・カール</td><td>ずんだもん-ノーマル</td><td>7.96 MiB</td><td>0:02:53</td></tr>
+<tr><td><a href="https://drive.google.com/uc?export=download&id=1DgAhvUYI5FF8CrNOjkOCUEDYnyn-bnDp">星の銀貨</a></td><td>グリムヴィルヘルム・カール</td><td>ずんだもん-ノーマル</td><td>7.96 MiB</td><td>0:02:53</td></tr>
 </table></body></html>
